--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+SYLLABUS
+
 PART 1 
 1.1 Quantum computing as a service
 1.2 Quantum speedup
@@ -20,3 +22,34 @@ PART 4
 4.2 PASQAL Quantum Evolution Kernel (QEK)
 4.3 PASQAL Differentiable Quantum Circuit (DQC)
 4.4 PASQAL Quantum Extremal Learning (QEL)
+
+-------------------------------------------------------------------
+
+BIBLIOGRAPHY
+
+Quantum computing with neutral atoms
+https://arxiv.org/abs/2006.12326
+
+Pulser: An open-source package for the design of pulse sequences in programmable neutral-atom arrays
+https://arxiv.org/abs/2104.15044
+
+Quantum Computation and Quantum Information
+https://www.amazon.fr/Quantum-Computation-Information-10th-Anniversary/dp/1107002176
+
+A Practical Guide to Quantum Machine Learning and Quantum Optimization: Hands-on Approach to Modern Quantum Algorithms 
+https://www.amazon.fr/Practical-Quantum-Machine-Learning-Optimization/dp/1804613835
+
+Adiabatic Quantum Computing
+https://arxiv.org/abs/1611.04471
+
+Behavior of Analog Quantum Algorithms
+https://arxiv.org/abs/2107.01218
+
+Quantum evolution kernel : Machine learning on graphs with programmable arrays of qubits
+https://arxiv.org/abs/2107.03247
+
+Solving nonlinear differential equations with differentiable quantum circuits
+https://arxiv.org/abs/2011.10395
+
+Quantum Extremal Learning
+https://arxiv.org/abs/2205.02807
